# polis-hermes

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  城邦仿真引擎架构方案.md  手动部署指南.md  整理桌面.bat  设置龙猫为主模型.ps1  部署脚本.ps1  配置龙猫.ps1
.ai-agent/: apply-changes.ps1
.ai-agent/6a45044b9f3d6718577ed1f8/plans/: overall-plan.md
.github/workflows/: ci.yml  monetization-agent.yml  sales-promotion.yml
city/: main.py
city/capabilities/: autogen_impl.py  governance_impl.py  llm_impl.py  tool_impl.py
city/core/: loop.py  memory.py  resident.py  state.py
city/residents/: factory.py
ecosystem/: __init__.py  autonomous.py  complexity.py  environment.py  events.py  evolution.py  interlocks.py  smoke_test.py  temporal.py  test_all.py
ecosystem/core/: __init__.py  agent_runtime.py  evolution_engine.py  memory_cascade.py  orchestrator.py  skill_registry.py
ecosystem/core/plugins/: __init__.py  economy.py  reputation_assigner.py  social_graph.py
memory_system/: __init__.py  base.py  config.py  cross_city_memory.py  emotion_tagger.py  episodic.py  evolution.py  graph.py  manager.py  procedural.py  reliability.py  retrieval.py  semantic.py  store.py
monetization/: __init__.py  config.py  decision.py  engine.py  metrics.py  obfuscated_core.py
monetization/payment/: __init__.py  alipay_adapter.py  mailer.py  models.py  orchestrator.py  provider.py  stripe_adapter.py  webhooks.py
monetization/sales/: __init__.py  agent.py  analytics.py  content_generator.py  credentials.py  models.py  platforms.py  publisher.py  run.py  templates.py
plan/: polis-blueprint-v3-detailed.md  polis_blueprint_v3.md
plugins/: README.md  claude_adapter.py  codex_adapter.py  deepseek_adapter.py  gemini_adapter.py  gemma_adapter.py  gpt4_adapter.py  mistral_adapter.py  phi_adapter.py  qwen_adapter.py  workbuddy_adapter.py
security/: __init__.py  anti_tamper.py  device_bind.py  exceptions.py  license_mgr.py  sign_verify.py
specs/: payment-integration-design.md  sales-promotion-design.md
tests/: __init__.py  conftest.py  test_alipay_adapter.py  test_cross_city_memory.py  test_emotion_tagger.py  test_evolution_engine.py  test_orchestrator.py  test_payment_models.py  test_reliability.py  test_sales_models.py  test_stripe_adapter.py
