[project]
name = "polis-hermes"
version = "2.0.0"
description = "Polis multi-agent cognitive city system"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 120

exclude = [
    "node_modules",
    "__pycache__",
    ".git",
    "ecosystem/state",
    "*.db",
    "*.pyc",
    "venv",
    ".venv",
    "build",
    "dist",
    "tests",
    "test_*.py",
]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "N",
    "S",
    "T20",
    "RUF",
]

ignore = [
    "E501",
    "E731",
    "B008",
    "S101",
    "S106",
    "S307",
    "T201",
    "UP007",
    "N803",
    "N806",
]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["S101", "T201", "S311"]
"*/tests/*" = ["S101", "T201", "S311"]
"*/start*.py" = ["T201"]
"*/launch*.py" = ["T201"]
"*evolution_engine*" = ["N806"]

[tool.ruff.lint.isort]
known-first-party = ["memory_system", "ecosystem", "polis_data", "comms", "bridge", "tools"]
known-third-party = ["psutil", "aiohttp", "httpx", "websockets", "requests", "numpy"]
case-sensitive = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
show_column_numbers = true
ignore_missing_imports = true
follow_imports = "silent"

exclude = [
    "ecosystem/state",
    "node_modules",
    "venv",
    ".venv",
    "build",
    "dist",
    "tests",
]

[[tool.mypy.overrides]]
module = ["numpy.*", "psutil.*", "pytest.*", "hypothesis.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --timeout=30 --strict-markers"
markers = [
    "slow: marks tests as slow",
    "integration: integration tests",
    "unit: unit tests",
    "security: security-related tests",
    "asyncio: tests that require asyncio event loop",
]
asyncio_mode = "auto"
timeout = 30

[tool.coverage.run]
source = [
    "memory_system",
    "ecosystem/core",
    "comms",
    "bridge",
    "tools",
    "polis_data",
    "security",
    "monetization",
]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
    "ecosystem/state/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ .__main__.",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "pass",
]
show_missing = true
skip_covered = false
precision = 2

[tool.bandit]
exclude_dirs = ["tests", "ecosystem/state", "node_modules", "venv"]
skips = ["B101", "B106", "B301", "B404", "B603", "B607"]
